--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!-- Main -->
       <section id="main">
         <header>
-          <span class="avatar"><img src="images/avatar.jpg" alt=""/></span>
+<!--           <span class="avatar"><img src="images/avatar.jpg" alt=""/></span> -->
           <h1>Jack&nbsp;Calvin&nbsp;Brown</h1>
           <p>Software Engineer</p>
         </header>
